fixed card width on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -11,7 +11,6 @@
 
 body {
   font-family: 'Source Sans Pro', 'Trebuchet MS', 'Lucida Grande', 'Bitstream Vera Sans', 'Helvetica Neue', sans-serif;
-  margin: 10rem;
   text-align: center;
   color: #293c4b;
   background-color: #262626;
@@ -46,8 +45,9 @@ body {
   border: 0.1rem solid #262626;
   border-radius: 0.3rem;
   padding: 1rem;
-  margin: 2rem;
+  margin: 5%;
   width: 10%;
+  min-width: 5rem;
   transition: transform 0.3s ease-out;
   cursor: pointer;
 }
